# rfsynth

./: LICENSE  README.md  setup.cfg  setup.py
Example/: Example_Calculating_Synthetic_Receiver_Functions.ipynb
src/rfsynth/: __init__.py
src/rfsynth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
